Reviews bug fixes: read more button wont appear on reviews without overflow. Fixed review image overflowing inconsistantly.

--- a/css/reviews.css
+++ b/css/reviews.css
@@ -86,15 +86,18 @@ main {
 }
 
 .review-image {
-    width: 40%;
+    height: 7em;
+    aspect-ratio: 1 / 1;
     border-radius: 10px;
     float: left;
     margin-right: 15px;
     cursor: pointer;
     transition: width 1s;
+    object-fit: cover;
 }
 
 .review-image.expanded {
+    height: fit-content;
     width: 100%;
     border-radius: 20px;
     margin-bottom: 20px;
